feat: permitir confirmacao de convidados sem login
